# deeprecall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  llms-full.txt  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deeprecall/: __init__.py  cli.py
deeprecall/adapters/: langchain.py  llamaindex.py  openai_server.py
deeprecall/core/: __init__.py  async_engine.py  cache_redis.py  callback_otel.py  callbacks.py  config.py  deprecations.py  engine.py  exceptions.py  guardrails.py  logging_config.py  retry.py  search_server.py  tracer.py  types.py
deeprecall/middleware/: auth.py
deeprecall/prompts/: templates.py
deeprecall/vectorstores/: __init__.py  base.py  chroma.py  faiss.py  milvus.py  pinecone.py  qdrant.py
docs/: adapters.md  api-reference.md  architecture.md  async.md  callbacks.md  cli.md  guardrails.md  index.md  quickstart.md  vectorstores.md
examples/: 01_quickstart.py  02_milvus_example.py  03_langchain_agent.py  04_llamaindex_rag.py  05_openai_api.py  06_multi_hop_reasoning.py  07_budget_and_guardrails.py  08_caching.py  09_callbacks_and_monitoring.py  10_async_and_batch.py  11_qdrant_example.py  12_pinecone_example.py  13_faiss_example.py  14_production_ready.py  README.md  cre_e2e_demo.py  v2_e2e_demo.py
tests/: conftest.py  test_async_engine.py  test_batch.py  test_callbacks.py  test_cli.py  test_concurrency.py  test_deprecations.py  test_e2e.py  test_engine.py  test_exceptions.py  test_guardrails.py  test_integration_redis_otel.py  test_logging_config.py  test_middleware.py  test_openai_server.py  test_prompts.py  test_reranker.py  test_retry.py  test_tracer.py  test_types.py  test_v04_live_validation.py  test_v04_upgrade.py
tests/test_adapters/: test_langchain.py  test_llamaindex.py
tests/test_vectorstores/: test_base.py  test_chroma.py  test_faiss.py  test_milvus.py  test_pinecone.py  test_qdrant.py
